# rust_excercism

./: .gitignore  Cargo.toml  index.html
demo/: app.ts  index.html  package.json  vite.config.ts
src/exercises/: acronym.rs  all_your_base.rs  allergies.rs  anagram.rs  armstrong.rs  beer_song.rs  bindary_search.rs  bob.rs  clock.rs  collatz_conjecture.rs  difference_of_squares.rs  diffie_hellman.rs  eluid_eggs.rs  gigasecond.rs  grains.rs  high_scores.rs  kindergarten_garden.rs  leap.rs  luhn.rs  matching_brackets.rs  minesweeper.rs  mod.rs  nth_prime.rs  prime_factors.rs  proverb.rs  raindrops.rs  reverse.rs  series.rs  space_age.rs  sublist.rs  sum_of_multiples.rs
