[package]
name = "wasm_playground"
version = "0.1.0"
edition = "2021"
description = "fun times with wasm"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
rand = "0.8.5"
serde = "1.0.203"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
unicode-segmentation = "1.11.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.time]
version = "0.3.36"
features = [
  'alloc',
  'macros',
  'parsing',
  'serde',
  'std',
  'wasm-bindgen'
]

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'DateTimeValue',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

# transitive dependencies

[dependencies.getrandom]
version = "*"
features = ["js"]